# json-rpc-demo

./: .gitignore  README.md  Taskfile.yml  go.work  go.work.sum
client-go/: go.mod  main.go
server-py/: main.py  pyproject.toml
