[project]
name = "server-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["ajsonrpc>=1.2.0"]

[dependency-groups]
dev = ["nuitka>=4.1"]

[tool.basedpyright]
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
